crates/diagnostics/src/snapshots/gmeow_diagnostics__render__tests__advisory_sarif_snapshot.snap
---
source: crates/diagnostics/src/render.rs
assertion_line: 1158
expression: value
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [],
      "results": [
        {
          "level": "note",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "ontology/gmeow.ttl"
                }
              },
              "properties": {
                "gmeow.syntheticPhysicalLocation": true,
                "gmeow.syntheticPhysicalLocationReason": "logical-only diagnostic anchor"
              }
            }
          ],
          "message": {
            "text": "consider a more specific sortal"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "1bad5a88c33c332d"
          },
          "properties": {
            "gmeow.suggestions": [
              "see the modeling guide",
              "use gmeow:Kind for rigid sortals"
            ]
          },
          "ruleId": "advice.sample"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/Blackcat-Informatics/gmeow-ontology",
          "name": "validate",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "note"
              },
              "helpUri": "https://blackcatinformatics.ca/gmeow/advice#sample",
              "id": "advice.sample"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
