crates/diagnostics/src/snapshots/gmeow_diagnostics__render__tests__sarif_stale_cache_primary_promotion_snapshot.snap
---
source: crates/diagnostics/src/render.rs
expression: value
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [
        {
          "location": {
            "uri": "core/ai/examples/grounded-claim.ttl"
          }
        }
      ],
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "https://blackcatinformatics.ca/gmeow/examples/ai/claim"
                },
                {
                  "fullyQualifiedName": "path https://blackcatinformatics.ca/gmeow/groundedIn"
                }
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "core/ai/examples/grounded-claim.ttl"
                }
              }
            }
          ],
          "message": {
            "text": "missing property"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "d264c4668f7ec617"
          },
          "ruleId": "shacl.MinCount"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/Blackcat-Informatics/gmeow-ontology",
          "name": "validate",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "shacl.MinCount"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
